<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="power_menu_advanced_restart_title">Advanced restart</string>
    <string name="power_menu_advanced_restart_summary">When unlocked, include options in the power menu for restarting into recovery or bootloader</string>
    <string name="power_menu_items_title">Power menu items</string>
    <string name="power_menu_title">@string/power_menu_long_press_for_power_menu_title</string>
    <string name="power_menu_screenshot_title">Screenshot</string>
    <string name="power_menu_airplane_title">Airplane mode</string>
    <string name="power_menu_users_title">User switcher</string>
    <string name="power_menu_bug_report_title">Bug report</string>
    <string name="power_menu_emergency_title">Emergency</string>
    <string name="power_menu_devicecontrols_title">Device controls</string>
    <string name="proximity_wake_title">Prevent accidental wake-up</string>
    <string name="proximity_wake_summary">Check the proximity sensor prior to waking up screen</string>
    <string name="status_bar_title">Status bar</string>
    <string name="status_bar_icons_title">Icons</string>
    <string name="status_bar_system_icons_title">System icons</string>
    <string name="status_bar_system_icons_summary">Control which status bar icons are shown</string>
    <string name="touchscreen_gesture_settings_title">Touchscreen gestures</string>
    <string name="touchscreen_gesture_settings_summary">Perform various touchscreen gestures for quick actions</string>
    <string name="touchscreen_gesture_two_fingers_down_swipe_title">Swipe down with two fingers</string>
    <string name="touchscreen_gesture_one_finger_up_swipe_title">Swipe up with one finger</string>
    <string name="touchscreen_gesture_one_finger_up_swipe_home_title">Swipe up from the home button</string>
    <string name="touchscreen_gesture_one_finger_down_swipe_title">Swipe down with one finger</string>
    <string name="touchscreen_gesture_one_finger_left_swipe_title">Swipe left with one finger</string>
    <string name="touchscreen_gesture_one_finger_right_swipe_title">Swipe right with one finger</string>
    <string name="touchscreen_gesture_up_arrow_title">Draw a \"Λ\"</string>
    <string name="touchscreen_gesture_down_arrow_title">Draw a \"V\"</string>
    <string name="touchscreen_gesture_left_arrow_title">Draw a \"&lt;\"</string>
    <string name="touchscreen_gesture_right_arrow_title">Draw a \"&gt;\"</string>
    <string name="touchscreen_gesture_letter_c_title">Draw the letter \"C\"</string>
    <string name="touchscreen_gesture_letter_e_title">Draw the letter \"e\"</string>
    <string name="touchscreen_gesture_letter_o_title">Draw the letter \"O\"</string>
    <string name="touchscreen_gesture_letter_m_title">Draw the letter \"M\"</string>
    <string name="touchscreen_gesture_letter_s_title">Draw the letter \"S\"</string>
    <string name="touchscreen_gesture_letter_v_title">Draw the letter \"V\"</string>
    <string name="touchscreen_gesture_letter_w_title">Draw the letter \"W\"</string>
    <string name="touchscreen_gesture_letter_z_title">Draw the letter \"Z\"</string>
    <string name="touchscreen_gesture_action_dialog_title">Gesture action</string>
    <string name="touchscreen_gesture_action_do_nothing">Do nothing</string>
    <string name="touchscreen_gesture_action_flashlight">Toggle the flashlight</string>
    <string name="touchscreen_gesture_action_camera">Open the camera</string>
    <string name="touchscreen_gesture_action_browser">Open the browser</string>
    <string name="touchscreen_gesture_action_dialer">Open the dialer</string>
    <string name="touchscreen_gesture_action_email">View your emails</string>
    <string name="touchscreen_gesture_action_messages">View your messages</string>
    <string name="touchscreen_gesture_action_play_pause_music">Play/pause music playback</string>
    <string name="touchscreen_gesture_action_previous_track">Navigate to the previous music track</string>
    <string name="touchscreen_gesture_action_next_track">Skip to the next music track</string>
    <string name="touchscreen_gesture_action_volume_down">Lower media volume</string>
    <string name="touchscreen_gesture_action_volume_up">Raise media volume</string>
    <string name="touchscreen_gestures_haptic_feedback_title">Haptic feedback</string>
    <string name="touchscreen_gestures_haptic_feedback_summary">Vibrate when a touchscreen gesture is detected</string>
    <string name="hardware_navigation_title">Hardware navigation</string>
    <string name="disable_navkeys_title">On-screen navigation bar</string>
    <string name="disable_navkeys_summary">Enable on-screen navigation bar and disable hardware buttons</string>
    <string name="high_touch_sensitivity_title">Increase touch sensitivity</string>
    <string name="high_touch_sensitivity_summary">Improves touch when using screen protectors</string>
    <string name="touchscreen_hovering_title">Touchscreen hovering</string>
    <string name="touchscreen_hovering_summary">Allows you to hover the screen like a mouse in web browsers, remote desktops, etc</string>
    <string name="high_touch_polling_rate_title">High touch polling rate</string>
    <string name="high_touch_polling_rate_summary">Increase touchscreen polling rate</string>
    <string name="button_settings">Buttons</string>
    <string name="swap_capacitive_keys_title">Swap capacitive buttons</string>
    <string name="swap_capacitive_keys_summary">Swap the order of recents and back buttons</string>
    <string name="live_display_color_profile_standard_title">Standard</string>
    <string name="live_display_color_profile_standard_summary">Accurate colors and bright whites</string>
    <string name="live_display_color_profile_natural_title">Natural</string>
    <string name="live_display_color_profile_natural_summary">Realistic colors and flesh tones</string>
    <string name="live_display_color_profile_dynamic_title">Dynamic</string>
    <string name="live_display_color_profile_dynamic_summary">Enhanced colors and bright whites</string>
    <string name="live_display_color_profile_cinema_title">Cinema</string>
    <string name="live_display_color_profile_cinema_summary">Perfect color reproduction for video</string>
    <string name="live_display_color_profile_astronomy_title">Astronomy</string>
    <string name="live_display_color_profile_astronomy_summary">Deep red for preserving night vision</string>
    <string name="live_display_color_profile_photography_title">Photography</string>
    <string name="live_display_color_profile_photography_summary">Perfect color reproduction for photos</string>
    <string name="live_display_color_profile_basic_title">Basic</string>
    <string name="live_display_color_profile_basic_summary">Use the display uncalibrated</string>
    <string name="live_display_color_profile_adaptive_title">Adaptive</string>
    <string name="live_display_color_profile_adaptive_summary">Colors adapt to ambient conditions</string>
    <string name="live_display_color_profile_reading_title">Reading</string>
    <string name="live_display_color_profile_reading_summary">Warmer colors for less eye strain</string>
    <string name="live_display_color_profile_srgb_title">sRGB</string>
    <string name="live_display_color_profile_srgb_summary">Colors accurate to the sRGB color space</string>
    <string name="live_display_color_profile_dci_p3_title">DCI-P3</string>
    <string name="live_display_color_profile_dci_p3_summary">Colors accurate to the DCI-P3 color space</string>
    <string name="live_display_anti_flicker_title">Anti flicker</string>
    <string name="live_display_anti_flicker_summary">Prevent extensive flickering and reduce eye strain in low light conditions. It might degrade color accuracy and affect the way some items are displayed.</string>
    <string name="live_display_reading_mode_title">Reading mode</string>
    <string name="live_display_reading_mode_summary">Grayscale mode for long-term reading</string>
    <string name="live_display_outdoor_mode_title">Automatic outdoor mode</string>
    <string name="live_display_outdoor_mode_summary">Increase brightness and saturation automatically under bright sunlight</string>
    <string name="live_display_enhance_color_title">Enhance colors</string>
    <string name="live_display_enhance_color_summary">Improve color vibrance of flesh tones, scenery, and other images</string>
    <string name="live_display_low_power_title">Reduce power consumption</string>
    <string name="live_display_low_power_summary">Adjust display for lowest power consumption without degradation</string>
    <string name="live_display_reset">@string/accessibility_text_reading_confirm_dialog_reset_button</string>
    <string name="picture_adjustment_title">Picture adjustment</string>
    <string name="picture_adjustment_summary">Adjust hue, saturation, intensity, and contrast</string>
    <string name="adj_hue_title">Hue</string>
    <string name="adj_saturation_title">Saturation</string>
    <string name="adj_intensity_title">Intensity</string>
    <string name="adj_contrast_title">Contrast</string>
    <string name="live_display_color_temperature_title">Color temperature</string>
    <string name="live_display_color_temperature_summary">Day: <xliff:g id="day_temperature">%1$d</xliff:g>K  Night: <xliff:g id="night_temperature">%2$d</xliff:g>K</string>
    <string name="live_display_color_temperature_label"><xliff:g id="degrees">%1$d</xliff:g>K</string>
    <string name="live_display_day">Day</string>
    <string name="live_display_night">Night</string>
    <string name="color_calibration_title">Color calibration</string>
    <string name="color_calibration_summary">Calibrate on-screen colors</string>
    <string name="color_red_title">Red</string>
    <string name="color_green_title">Green</string>
    <string name="color_blue_title">Blue</string>
    <string name="status_bar_battery_style_title">Battery icon</string>
    <string name="status_bar_battery_style_icon_portrait">System default</string>
    <string name="home_key_title">Home button</string>
    <string name="menu_key_title">Menu button</string>
    <string name="assist_key_title">Search button</string>
    <string name="appswitch_key_title">Recents button</string>
    <string name="short_press_title">Short press action</string>
    <string name="long_press_title">Long press action</string>
    <string name="double_tap_title">Double tap action</string>
    <string name="display_rotation_title">Rotation Manager</string>
    <string name="display_rotation_category">Available rotations</string>
    <string name="display_rotation_0_title">@string/external_display_standard_rotation</string>
    <string name="display_rotation_90_title">@string/external_display_rotation_90</string>
    <string name="display_rotation_180_title">@string/external_display_rotation_180</string>
    <string name="display_rotation_270_title">@string/external_display_rotation_270</string>
    <string name="notifications_edge_light_title">Edge light pulse</string>
    <string name="notifications_edge_light_footer_title">When in use, notifications or always-on display will light up the side edges of the screen</string>
    <string name="notifications_edge_light_enable_title">Use edge light</string>
    <string name="notifications_edge_light_trigger_on_pulse_title">Pulse while dozing</string>
    <string name="notifications_edge_light_trigger_on_pulse_summary">Show animations during ambient display, even without notifications</string>
    <string name="notifications_edge_light_repeat_animation_title">Repeat animation</string>
    <string name="notifications_edge_light_repeat_animation_summary_on">Repeat until timeout</string>
    <string name="notifications_edge_light_repeat_animation_summary_off">Show only once</string>
    <string name="notifications_edge_light_color_mode_title">Choose pulse color</string>
</resources>