<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2016 The CyanogenMod Project
     SPDX-FileCopyrightText: 2017-2018,2021-2022 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:title="@string/notifications_edge_light_title">

    <com.android.settingslib.widget.MainSwitchPreference
        android:key="edge_light_enabled"
        android:title="@string/notifications_edge_light_enable_title"
        settings:controller="com.evervolv.toolbox.notification.EdgeLightPreferenceController" />

    <SwitchPreferenceCompat
        android:key="edge_light_always_trigger_on_pulse"
        android:title="@string/notifications_edge_light_trigger_on_pulse_title"
        android:summary="@string/notifications_edge_light_trigger_on_pulse_summary"
        settings:controller="com.evervolv.toolbox.notification.EdgeLightSwitchPreferenceController" />

    <SwitchPreferenceCompat
        android:key="edge_light_repeat_animation"
        android:title="@string/notifications_edge_light_repeat_animation_title"
        android:summaryOn="@string/notifications_edge_light_repeat_animation_summary_on"
        android:summaryOff="@string/notifications_edge_light_repeat_animation_summary_off"
        settings:controller="com.evervolv.toolbox.notification.EdgeLightSwitchPreferenceController" />

    <ListPreference
        android:key="edge_light_color_mode"
        android:title="@string/notifications_edge_light_color_mode_title"
        android:summary="%s"
        android:dialogTitle="@string/notifications_edge_light_color_mode_title"
        android:entries="@array/notifications_edge_light_color_mode_entries"
        android:entryValues="@array/notifications_edge_light_color_mode_values"
        settings:controller="com.evervolv.toolbox.notification.EdgeLightColorModePreferenceController" />

    <com.android.settingslib.widget.FooterPreference
        android:key="display_rotation_footer_preference"
        android:title="@string/notifications_edge_light_footer_title"
        android:selectable="false"
        settings:searchable="false"/>

</PreferenceScreen>
