<?xml version="1.0" encoding="UTF-8"?>
<!--
     SPDX-FileCopyrightText: 2024 Evervolv
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:title="@string/button_settings">

    <SwitchPreferenceCompat
        android:key="swap_capacitive_keys"
        android:title="@string/swap_capacitive_keys_title"
        android:summary="@string/swap_capacitive_keys_summary"
        settings:controller="com.evervolv.toolbox.inputmethod.CapacitiveKeySwapPreferenceController" />

    <PreferenceCategory
        android:key="home_key"
        android:title="@string/home_key_title"
        settings:controller="com.evervolv.toolbox.inputmethod.CategoryPreferenceController">

        <ListPreference
            android:key="button_home_long_press"
            android:dialogTitle="@string/long_press_title"
            android:title="@string/long_press_title"
            android:entries="@array/button_action_entries"
            android:entryValues="@array/button_action_values"
            settings:controller="com.evervolv.toolbox.inputmethod.LongPressActionPreferenceController" />

        <ListPreference
            android:key="button_home_double_tap"
            android:dialogTitle="@string/double_tap_title"
            android:title="@string/double_tap_title"
            android:entries="@array/button_action_entries"
            android:entryValues="@array/button_action_values"
            settings:controller="com.evervolv.toolbox.inputmethod.PressActionPreferenceController" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="menu_key"
        android:title="@string/menu_key_title"
        settings:controller="com.evervolv.toolbox.inputmethod.CategoryPreferenceController">

        <ListPreference
            android:key="button_menu_press"
            android:dialogTitle="@string/short_press_title"
            android:title="@string/short_press_title"
            android:entries="@array/button_action_entries"
            android:entryValues="@array/button_action_values"
            settings:controller="com.evervolv.toolbox.inputmethod.PressActionPreferenceController" />

        <ListPreference
            android:key="button_menu_long_press"
            android:dialogTitle="@string/long_press_title"
            android:title="@string/long_press_title"
            android:entries="@array/button_action_entries"
            android:entryValues="@array/button_action_values"
            settings:controller="com.evervolv.toolbox.inputmethod.LongPressActionPreferenceController" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="assist_key"
        android:title="@string/assist_key_title"
        settings:controller="com.evervolv.toolbox.inputmethod.CategoryPreferenceController">

        <ListPreference
            android:key="button_assist_press"
            android:dialogTitle="@string/short_press_title"
            android:title="@string/short_press_title"
            android:entries="@array/button_action_entries"
            android:entryValues="@array/button_action_values"
            settings:controller="com.evervolv.toolbox.inputmethod.PressActionPreferenceController" />

        <ListPreference
            android:key="button_assist_long_press"
            android:dialogTitle="@string/long_press_title"
            android:title="@string/long_press_title"
            android:entries="@array/button_action_entries"
            android:entryValues="@array/button_action_values"
            settings:controller="com.evervolv.toolbox.inputmethod.LongPressActionPreferenceController" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="app_switch_key"
        android:title="@string/appswitch_key_title"
        settings:controller="com.evervolv.toolbox.inputmethod.CategoryPreferenceController">

        <ListPreference
            android:key="button_app_switch_press"
            android:dialogTitle="@string/short_press_title"
            android:title="@string/short_press_title"
            android:entries="@array/button_action_entries"
            android:entryValues="@array/button_action_values"
            settings:controller="com.evervolv.toolbox.inputmethod.PressActionPreferenceController" />

        <ListPreference
            android:key="button_app_switch_long_press"
            android:dialogTitle="@string/long_press_title"
            android:title="@string/long_press_title"
            android:entries="@array/button_action_entries"
            android:entryValues="@array/button_action_values"
            settings:controller="com.evervolv.toolbox.inputmethod.LongPressActionPreferenceController" />

    </PreferenceCategory>

</PreferenceScreen>
